added repo to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "android",
     "google"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/m59peacemaker/svelte-refresh-indicator"
+  },
   "author": "Johnny Hauser <johnnyhauser@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {},
